GNOME Bugzilla – Bug 750998
JNI: jaw_table_add_row_selection is missing.
Last modified: 2015-06-16 17:01:44 UTC
The AtkTable interface has a add_row_selection pointer which is not made use of in the wrapper.[1] There isn't a "direct translation" for add_row_selection in AccessibleTable.[2] It seems like the AccessibleSelection interface is implemented by the AccessibleJTable class[3] [1] https://git.gnome.org/browse/atk/tree/atk/atktable.h#n102 [2] http://docs.oracle.com/javase/7/docs/api/javax/accessibility/AccessibleSelection.html#addAccessibleSelection(int) [3] http://docs.oracle.com/javase/7/docs/api/javax/swing/JTable.AccessibleJTable.html
Created attachment 305326 [details] [review] Patch to address problem