JNI: create jaw_table_add_row_selection

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750998